--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ analysis/graphs/
 *.cb2
 .*.lb
 
+## Reference files
+*.docx
+
 ## build system
 .direnv
 
@@ -28,14 +31,14 @@ analysis/graphs/
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-thesis.pdf
-presentation.pdf
-presentation-handout.pdf
-presentation-with-notes-handout.pdf
-proposal.pdf
+# thesis.pdf
+# presentation.pdf
+# presentation-handout.pdf
+# presentation-with-notes-handout.pdf
+# proposal.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
@@ -211,8 +214,8 @@ pythontex-files-*/
 *.loe
 
 # TikZ & PGF
-#*.dpth
-#*.md5
+*.dpth
+*.md5
 *.auxlock
 
 # todonotes
