--- a/guide/Makefile
+++ b/guide/Makefile
@@ -1,7 +1,9 @@
 
 CC=latexmk
-CFLAGS=-xelatex -bibtex -time -rc-report- -synctex=1 -interaction=nonstopmode -shell-escape
+CFLAGS=-xelatex -bibtex -time -rc-report- -synctex=1 -interaction=nonstopmode -shell-escape -quiet
 TMPFILES=*.gls *.glg *.glo *.glsdefs *.ist *.xdy *.auxlock *.fdb_latexmk *.run.xml *.bbl *.aux *.dvi *.aux *.log *.fls *.toc *.lof *.bcf *.lot
+
+default: all
 
 watch:
 	$(CC) $(CFLAGS) -pvc main.tex
