--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ analysis/graphs/
 *.cb
 *.cb2
 .*.lb
+*.md5
 
 ## Reference files
 *.docx
@@ -29,8 +30,8 @@ analysis/graphs/
 *.xdv
 *-converted-to.*
 # these rules might exclude image files for figures etc.
-# *.ps
-# *.eps
+*.ps
+*.eps
 *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
