--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ analysis/graphs/
 # these rules might exclude image files for figures etc.
 *.ps
 *.eps
-*.pdf
+#*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 # thesis.pdf
